# bridge-template

./: .gitignore  .pre-commit-config.yaml  README.md  bridge-template.cabal  flake.nix  format.sh
.direnv/: flake-profile-1-link
.github/workflows/: main.yml
app/: Main.hs
assets/test-reports/: property.txt
front-end/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
front-end/components/: Alert.tsx  Button.tsx  Emulator.tsx  MainDApp.tsx  Simulator.tsx  User.tsx  Utils.tsx  WalletConnect.tsx
front-end/endpoints/: config.deployment.ts  multisig.deploy.ts  multisig.fullfill.ts  multisig.update.ts  types.ts  user.burn.ts  user.request.ts  utils.ts
front-end/endpoints/test/: runEmulator.ts  runSimulator.ts
front-end/endpoints/tests/: runEmulator.ts  runSimulator.ts
front-end/pages/: _app.tsx  index.tsx
front-end/utils/: lucid.ts  validators.ts
src/: CBTCMintPolicy.hs  GuardianValidator.hs  MultiSigMintPolicy.hs  MultiSigValidator.hs  Utils.hs  WrapMintPolicy.hs
src/Collection/: Utils.hs
test/: README.md  Spec.hs
test/Spec/: GuardianValidatorSpec.hs  MintWrapSpec.hs  MultiSigMintPolicySpec.hs  MultiSigValidatorSpec.hs  WrapMintPolicySpec.hs
